# SimpleGameEngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  delete_build.bat  gen_makefile.sh  gen_vs2022.bat  install_ubunta_packages.sh  install_vcpkg_packages.bat  install_vcpkg_packages.sh  renderDoc.cap  vs-chromium-project.txt
examples/Test101/: imgui.ini
examples/Test101/Assets/Shaders/: editorgui.shader  fullscreen.shader  line.shader  terrain.shader  test.shader  test2.shader
src/core/: CMakeLists.txt
src/core/src/: sge_core-pch.h  sge_core.h
src/core/src/sge_core/: sge_core-pch.h
src/core/src/sge_core/alllocators/: LinearAllocator.cpp  LinearAllocator.h
src/core/src/sge_core/app/: AppBase.cpp  AppBase.h  (+1 more)
src/core/test/: CMakeLists.txt
src/core/test/src/: main.cpp  sge_core_test.cpp
src/editor/: CMakeLists.txt
src/editor/app/: CMakeLists.txt
src/editor/app/src/: main.cpp  sge_editor_app.cpp
src/editor/app/src/exercises/: BasicDrawer.cpp  BasicDrawer.h
src/editor/src/: sge_editor.h
src/editor/src/sge_editor/: EditorContext.cpp  EditorContext.h  EditorSelection.cpp  EditorSelection.h  sge_editor-pch.h
src/engine/src/: sge_engine.h
src/engine/src/sge_engine/: Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/net/: CMakeLists.txt
src/net/src/: sge_net-pch.h  sge_net.h
src/render/shader_compiler/src/: ShaderCompiler_DX11.cpp  ShaderCompiler_DX11.h  ShaderParser.cpp  ShaderParser.h  sge_shader_compiler.cpp
src/render/src/: sge_render.h
src/render/src/sge_render/: Renderer.cpp  Renderer.h  sge_render-config.h  sge_render-pch.h
(+238 files in other folders)
